force-app/main/default/objects/Invoice__c/fields/Max_amount__c.field-meta.xml
<CustomField>
    <fullName>Max_amount__c</fullName>
    <label>Max amount</label>
    <summarizedField>Sell_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>