force-app/main/default/objects/Invoice__c/fields/Min_amount__c.field-meta.xml
<CustomField>
    <fullName>Min_amount__c</fullName>
    <label>Min amount</label>
    <summarizedField>Sell_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>