force-app/main/default/objects/Invoice__c/fields/Total_items__c.field-meta.xml
<CustomField>
    <fullName>Total_items__c</fullName>
    <label>Total items</label>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>