force-app/main/default/objects/Invoice__c/validationRules/Closed_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_date_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Closed&apos;),  ISBLANK( Close_date__c ) )</errorConditionFormula>
    <errorDisplayField>Close_date__c</errorDisplayField>
    <errorMessage>Invoice close date must be added when closing the invoice</errorMessage>
</ValidationRule>